--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.media.jar",
         "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.swing.jar",
         "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
-        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar"
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar",
+        "c:\\Users\\lucas\\Desktop\\postgresql-42.3.1.jar"
     ]
 }
