--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,31 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    // Usare IntelliSense per informazioni sui possibili attributi.
+    // Al passaggio del mouse vengono visualizzate le descrizioni degli attributi esistenti.
+    // Per altre informazioni, visitare: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "type": "java",
             "name": "Launch Current File",
             "request": "launch",
-            "mainClass": "${file}"
+            "mainClass": "${file}",
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
             "name": "Launch App",
             "request": "launch",
             "mainClass": "App",
-            "projectName": "facile_45ae570d",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "projectName": "votoElettronico_2ab45e1b",
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "votoElettronico_2ab45e1b",
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
