--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,18 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src"
+    ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.base.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.controls.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.fxml.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.graphics.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.media.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.swing.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar",
-        "c:\\java\\javafx-sdk-17.0.1\\lib\\postgresql-42.3.1.jar"
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.base.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.controls.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.fxml.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.graphics.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.media.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.swing.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
+        "c:\\Users\\lucas\\Desktop\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar",
+        "c:\\Users\\lucas\\Desktop\\postgresql-42.3.1.jar"
     ]
 }
