--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,19 +6,34 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "votoElettronico_8968f8c1",
+            "vmArgs": "--module-path C:/Users/lucas/OneDrive/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "votoElettronico_8968f8c1",
+            "vmArgs": "--module-path C:/Users/lucas/OneDrive/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "Main",
             "projectName": "facile_45ae570d",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/Users/lucas/OneDrive/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
-            
+            "vmArgs": "--module-path C:/Users/lucas/OneDrive/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
@@ -26,7 +41,7 @@
             "request": "launch",
             "mainClass": "App",
             "projectName": "facile_45ae570d",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/Users/lucas/OneDrive/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
