--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,14 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "mainClass": "votazione.Main",
+            "projectName": "facile_45ae570d",
+            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "mainClass": "Main",
             "projectName": "facile_45ae570d",
             "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
@@ -18,7 +26,6 @@
             "request": "launch",
             "mainClass": "${file}",
             "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
-        },
-
+        }
     ]
 }
