--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,17 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "mainClass": "Main",
+            "projectName": "votoElettronico_2ab45e1b",
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "mainClass": "votazione.Main",
             "projectName": "facile_45ae570d",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
@@ -18,14 +26,14 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "facile_45ae570d",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path C:/Users/lucas/Desktop/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
