--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.votoelettronico/com.example.votoelettronico.HelloApplication
+                            <mainClass>com.example.votoelettronico/com.example.votoelettronico.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
